# TaskOn

./: README.md  app.py  audio_service.py  logger.py  main.py  pyproject.toml  resources.py  timer.py  ui.py
.github/workflows/: ci.yml  taskon-tests.yml
taskon/: app.py  audio_service.py  config.py  logger.py  main.py  resources.py  task_manager.py  timer.py  ui.py
tests/: test_task_manager.py  test_timer.py
