[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskon"
version = "0.1.1-alpha"
description = "TaskOn — Pomodoro Timer App"
authors = [
  { name="Kumuditha Silva", email="kumudithasilva66@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5.0",
  "pytest>=7.4.0"
]

[tool.setuptools.packages.find]
where = ["taskon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
